parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    GENERATE_RAYFILES
    LIGHT
    TEXTURE
    SAVE_COORDS
    SHADING_TYPE
    CAMERA
    FOCAL
    WEB
    CO
    SAVE_KNOBS
    TWEEN
    MESH
    AMBIENT
    CONSTANTS

Grammar

Rule 0     S' -> statement
Rule 1     statement -> SHADING INT INT INT
Rule 2     statement -> SHADING INT INT INT SYMBOL
Rule 3     stuff -> <empty>
Rule 4     stuff -> statement stuff
Rule 5     statement -> COMMENT
Rule 6     statement -> FRAMES INT
Rule 7     statement -> BASENAME TEXT
Rule 8     statement -> VARY SYMBOL INT INT NUMBER NUMBER
Rule 9     statement -> VARY SYMBOL INT INT NUMBER NUMBER NUMBER
Rule 10    statement -> POP
Rule 11    statement -> PUSH
Rule 12    statement -> SCREEN INT INT
Rule 13    statement -> SCREEN
Rule 14    statement -> SAVE
Rule 15    statement -> SAVE TEXT
Rule 16    statement -> DISPLAY TEXT
Rule 17    statement -> DISPLAY
Rule 18    statement -> SET SYMBOL NUMBER
Rule 19    statement -> SET_KNOBS NUMBER
Rule 20    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
Rule 21    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 22    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
Rule 23    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    statement -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 25    statement -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 27    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 28    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 29    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 31    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    statement -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 33    statement -> MOVE NUMBER NUMBER NUMBER
Rule 34    statement -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 35    statement -> SCALE NUMBER NUMBER NUMBER
Rule 36    statement -> ROTATE XYZ NUMBER SYMBOL
Rule 37    statement -> ROTATE XYZ NUMBER
Rule 38    SYMBOL -> XYZ
Rule 39    SYMBOL -> ID
Rule 40    TEXT -> SYMBOL
Rule 41    TEXT -> STRING
Rule 42    NUMBER -> DOUBLE
Rule 43    NUMBER -> INT

Terminals, with rules where they appear

AMBIENT              : 
BASENAME             : 7
BEZIER               : 28 29
BOX                  : 24
CAMERA               : 
CIRCLE               : 26 27
CO                   : 
COMMENT              : 5
CONSTANTS            : 
DISPLAY              : 16 17
DOUBLE               : 42
FOCAL                : 
FRAMES               : 6
GENERATE_RAYFILES    : 
HERMITE              : 30 31
ID                   : 39
INT                  : 1 1 1 2 2 2 6 8 8 9 9 12 12 20 20 22 22 27 28 30 43
LIGHT                : 
LINE                 : 25
MESH                 : 
MOVE                 : 32 33
POP                  : 10
PUSH                 : 11
ROTATE               : 36 37
SAVE                 : 14 15
SAVE_COORDS          : 
SAVE_KNOBS           : 
SCALE                : 34 35
SCREEN               : 12 13
SET                  : 18
SET_KNOBS            : 19
SHADING              : 1 2
SHADING_TYPE         : 
SPHERE               : 20 21
STRING               : 41
TEXTURE              : 
TORUS                : 22 23
TWEEN                : 
VARY                 : 8 9
WEB                  : 
XYZ                  : 36 37 38
error                : 

Nonterminals, with rules where they appear

NUMBER               : 8 8 9 9 9 18 19 20 20 20 20 21 21 21 21 22 22 22 22 22 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 26 27 27 27 27 27 27 27 28 28 28 28 28 28 28 28 28 28 28 28 29 29 29 29 29 29 29 29 29 29 29 29 30 30 30 30 30 30 30 30 30 30 30 30 31 31 31 31 31 31 31 31 31 31 31 31 32 32 32 33 33 33 34 34 34 35 35 35 36 37
SYMBOL               : 2 8 9 18 32 34 36 40
TEXT                 : 7 15 16
statement            : 4 0
stuff                : 4

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . SHADING INT INT INT
    (2) statement -> . SHADING INT INT INT SYMBOL
    (5) statement -> . COMMENT
    (6) statement -> . FRAMES INT
    (7) statement -> . BASENAME TEXT
    (8) statement -> . VARY SYMBOL INT INT NUMBER NUMBER
    (9) statement -> . VARY SYMBOL INT INT NUMBER NUMBER NUMBER
    (10) statement -> . POP
    (11) statement -> . PUSH
    (12) statement -> . SCREEN INT INT
    (13) statement -> . SCREEN
    (14) statement -> . SAVE
    (15) statement -> . SAVE TEXT
    (16) statement -> . DISPLAY TEXT
    (17) statement -> . DISPLAY
    (18) statement -> . SET SYMBOL NUMBER
    (19) statement -> . SET_KNOBS NUMBER
    (20) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (21) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (22) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (23) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (25) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (28) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (29) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (31) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (33) statement -> . MOVE NUMBER NUMBER NUMBER
    (34) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (35) statement -> . SCALE NUMBER NUMBER NUMBER
    (36) statement -> . ROTATE XYZ NUMBER SYMBOL
    (37) statement -> . ROTATE XYZ NUMBER

    SHADING         shift and go to state 15
    COMMENT         shift and go to state 9
    FRAMES          shift and go to state 5
    BASENAME        shift and go to state 8
    VARY            shift and go to state 4
    POP             shift and go to state 12
    PUSH            shift and go to state 14
    SCREEN          shift and go to state 16
    SAVE            shift and go to state 23
    DISPLAY         shift and go to state 7
    SET             shift and go to state 10
    SET_KNOBS       shift and go to state 21
    SPHERE          shift and go to state 18
    TORUS           shift and go to state 17
    BOX             shift and go to state 1
    LINE            shift and go to state 6
    CIRCLE          shift and go to state 22
    BEZIER          shift and go to state 20
    HERMITE         shift and go to state 11
    MOVE            shift and go to state 3
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 19

    statement                      shift and go to state 13

state 1

    (24) statement -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 26

state 2

    (34) statement -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (35) statement -> SCALE . NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 27

state 3

    (32) statement -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (33) statement -> MOVE . NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 28

state 4

    (8) statement -> VARY . SYMBOL INT INT NUMBER NUMBER
    (9) statement -> VARY . SYMBOL INT INT NUMBER NUMBER NUMBER
    (38) SYMBOL -> . XYZ
    (39) SYMBOL -> . ID

    XYZ             shift and go to state 31
    ID              shift and go to state 30

    SYMBOL                         shift and go to state 29

state 5

    (6) statement -> FRAMES . INT

    INT             shift and go to state 32


state 6

    (25) statement -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 33

state 7

    (16) statement -> DISPLAY . TEXT
    (17) statement -> DISPLAY .
    (40) TEXT -> . SYMBOL
    (41) TEXT -> . STRING
    (38) SYMBOL -> . XYZ
    (39) SYMBOL -> . ID

    $end            reduce using rule 17 (statement -> DISPLAY .)
    STRING          shift and go to state 34
    XYZ             shift and go to state 31
    ID              shift and go to state 30

    TEXT                           shift and go to state 35
    SYMBOL                         shift and go to state 36

state 8

    (7) statement -> BASENAME . TEXT
    (40) TEXT -> . SYMBOL
    (41) TEXT -> . STRING
    (38) SYMBOL -> . XYZ
    (39) SYMBOL -> . ID

    STRING          shift and go to state 34
    XYZ             shift and go to state 31
    ID              shift and go to state 30

    TEXT                           shift and go to state 37
    SYMBOL                         shift and go to state 36

state 9

    (5) statement -> COMMENT .

    $end            reduce using rule 5 (statement -> COMMENT .)


state 10

    (18) statement -> SET . SYMBOL NUMBER
    (38) SYMBOL -> . XYZ
    (39) SYMBOL -> . ID

    XYZ             shift and go to state 31
    ID              shift and go to state 30

    SYMBOL                         shift and go to state 38

state 11

    (30) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (31) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 39

state 12

    (10) statement -> POP .

    $end            reduce using rule 10 (statement -> POP .)


state 13

    (0) S' -> statement .



state 14

    (11) statement -> PUSH .

    $end            reduce using rule 11 (statement -> PUSH .)


state 15

    (1) statement -> SHADING . INT INT INT
    (2) statement -> SHADING . INT INT INT SYMBOL

    INT             shift and go to state 40


state 16

    (12) statement -> SCREEN . INT INT
    (13) statement -> SCREEN .

    INT             shift and go to state 41
    $end            reduce using rule 13 (statement -> SCREEN .)


state 17

    (22) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (23) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 42

state 18

    (20) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER INT INT
    (21) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 43

state 19

    (36) statement -> ROTATE . XYZ NUMBER SYMBOL
    (37) statement -> ROTATE . XYZ NUMBER

    XYZ             shift and go to state 44


state 20

    (28) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (29) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 45

state 21

    (19) statement -> SET_KNOBS . NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 46

state 22

    (26) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 47

state 23

    (14) statement -> SAVE .
    (15) statement -> SAVE . TEXT
    (40) TEXT -> . SYMBOL
    (41) TEXT -> . STRING
    (38) SYMBOL -> . XYZ
    (39) SYMBOL -> . ID

    $end            reduce using rule 14 (statement -> SAVE .)
    STRING          shift and go to state 34
    XYZ             shift and go to state 31
    ID              shift and go to state 30

    TEXT                           shift and go to state 48
    SYMBOL                         shift and go to state 36

state 24

    (42) NUMBER -> DOUBLE .

    DOUBLE          reduce using rule 42 (NUMBER -> DOUBLE .)
    INT             reduce using rule 42 (NUMBER -> DOUBLE .)
    $end            reduce using rule 42 (NUMBER -> DOUBLE .)
    XYZ             reduce using rule 42 (NUMBER -> DOUBLE .)
    ID              reduce using rule 42 (NUMBER -> DOUBLE .)


state 25

    (43) NUMBER -> INT .

    DOUBLE          reduce using rule 43 (NUMBER -> INT .)
    INT             reduce using rule 43 (NUMBER -> INT .)
    $end            reduce using rule 43 (NUMBER -> INT .)
    XYZ             reduce using rule 43 (NUMBER -> INT .)
    ID              reduce using rule 43 (NUMBER -> INT .)


state 26

    (24) statement -> BOX NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 49

state 27

    (34) statement -> SCALE NUMBER . NUMBER NUMBER SYMBOL
    (35) statement -> SCALE NUMBER . NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 50

state 28

    (32) statement -> MOVE NUMBER . NUMBER NUMBER SYMBOL
    (33) statement -> MOVE NUMBER . NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 51

state 29

    (8) statement -> VARY SYMBOL . INT INT NUMBER NUMBER
    (9) statement -> VARY SYMBOL . INT INT NUMBER NUMBER NUMBER

    INT             shift and go to state 52


state 30

    (39) SYMBOL -> ID .

    $end            reduce using rule 39 (SYMBOL -> ID .)
    INT             reduce using rule 39 (SYMBOL -> ID .)
    DOUBLE          reduce using rule 39 (SYMBOL -> ID .)


state 31

    (38) SYMBOL -> XYZ .

    $end            reduce using rule 38 (SYMBOL -> XYZ .)
    INT             reduce using rule 38 (SYMBOL -> XYZ .)
    DOUBLE          reduce using rule 38 (SYMBOL -> XYZ .)


state 32

    (6) statement -> FRAMES INT .

    $end            reduce using rule 6 (statement -> FRAMES INT .)


state 33

    (25) statement -> LINE NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 53

state 34

    (41) TEXT -> STRING .

    $end            reduce using rule 41 (TEXT -> STRING .)


state 35

    (16) statement -> DISPLAY TEXT .

    $end            reduce using rule 16 (statement -> DISPLAY TEXT .)


state 36

    (40) TEXT -> SYMBOL .

    $end            reduce using rule 40 (TEXT -> SYMBOL .)


state 37

    (7) statement -> BASENAME TEXT .

    $end            reduce using rule 7 (statement -> BASENAME TEXT .)


state 38

    (18) statement -> SET SYMBOL . NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 54

state 39

    (30) statement -> HERMITE NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (31) statement -> HERMITE NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 55

state 40

    (1) statement -> SHADING INT . INT INT
    (2) statement -> SHADING INT . INT INT SYMBOL

    INT             shift and go to state 56


state 41

    (12) statement -> SCREEN INT . INT

    INT             shift and go to state 57


state 42

    (22) statement -> TORUS NUMBER . NUMBER NUMBER NUMBER NUMBER INT INT
    (23) statement -> TORUS NUMBER . NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 58

state 43

    (20) statement -> SPHERE NUMBER . NUMBER NUMBER NUMBER INT INT
    (21) statement -> SPHERE NUMBER . NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 59

state 44

    (36) statement -> ROTATE XYZ . NUMBER SYMBOL
    (37) statement -> ROTATE XYZ . NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 60

state 45

    (28) statement -> BEZIER NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (29) statement -> BEZIER NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 61

state 46

    (19) statement -> SET_KNOBS NUMBER .

    $end            reduce using rule 19 (statement -> SET_KNOBS NUMBER .)


state 47

    (26) statement -> CIRCLE NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> CIRCLE NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 62

state 48

    (15) statement -> SAVE TEXT .

    $end            reduce using rule 15 (statement -> SAVE TEXT .)


state 49

    (24) statement -> BOX NUMBER NUMBER . NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 63

state 50

    (34) statement -> SCALE NUMBER NUMBER . NUMBER SYMBOL
    (35) statement -> SCALE NUMBER NUMBER . NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 64

state 51

    (32) statement -> MOVE NUMBER NUMBER . NUMBER SYMBOL
    (33) statement -> MOVE NUMBER NUMBER . NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 65

state 52

    (8) statement -> VARY SYMBOL INT . INT NUMBER NUMBER
    (9) statement -> VARY SYMBOL INT . INT NUMBER NUMBER NUMBER

    INT             shift and go to state 66


state 53

    (25) statement -> LINE NUMBER NUMBER . NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 67

state 54

    (18) statement -> SET SYMBOL NUMBER .

    $end            reduce using rule 18 (statement -> SET SYMBOL NUMBER .)


state 55

    (30) statement -> HERMITE NUMBER NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (31) statement -> HERMITE NUMBER NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) NUMBER -> . DOUBLE
    (43) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 68

state 56

    (1) statement -> SHADING INT INT . INT
    (2) statement -> SHADING INT INT . INT SYMBOL

    INT             shift and go to state 69


state 57

    (12) statement -> SCREEN INT INT .

    $end            reduce using rule 12 (statement -> SCREEN INT INT .)


state 58
